修改光功率计算的第一种计算方法

--- a/zReadme/使用说明.md
+++ b/zReadme/使用说明.md
@@ -4,6 +4,53 @@
 
 ---
 
+## 0. 环境配置与构建
+
+本章节介绍如何配置 Falcor 的开发环境并成功构建项目。正确的环境配置是顺利运行 Falcor 的第一步。
+
+### 0.1. 系统与硬件要求
+
+在开始之前，请确保您的系统满足以下最低要求 ([来源](https://github.com/NVIDIAGameWorks/Falcor)):
+
+* **操作系统**: Windows 10 (版本 20H2 或更高版本)
+* **开发环境**: Visual Studio 2022
+* **Windows SDK**: 版本 10.0.19041.0 或更高
+* **显卡 (GPU)**: 支持 DirectX Raytracing (DXR) 的 GPU，例如 NVIDIA Titan V 或 GeForce RTX 系列及更高型号。
+* **显卡驱动**: NVIDIA 驱动程序版本 466.11 或更新。
+
+### 0.2. 可选依赖项
+
+为了启用 Falcor 的全部功能，您可能需要安装以下可选组件：
+
+* **Windows 图形工具 (Graphics Tools)**: 对于运行 DirectX 12 调试层是必需的。可通过 Windows 的 "可选功能" -> "添加功能" -> "图形工具" 来安装。
+* **NVAPI**: 启用 NVIDIA 特定的 API 功能。需从 NVIDIA 开发者网站下载并解压到 `external/packman/nvapi` 目录。
+* **CUDA**: 启用 CUDA 加速计算。需从 NVIDIA 官网下载并安装 CUDA Toolkit (推荐 11.6.2 或更高版本)。
+* **OptiX**: 用于 `OptixDenoiser` 降噪通道。需从 NVIDIA 开发者网站下载并将其 SDK 文件夹链接或复制到 `external/packman/optix`。
+
+### 0.3. 项目构建
+
+Falcor 使用 CMake 作为其构建系统。官方推荐使用以下两种方式进行构建：
+
+#### 使用 Visual Studio 2022 【推荐】
+
+1. 克隆 Falcor 仓库到本地。
+2. 在仓库根目录运行 `setup_vs2022.bat` 批处理文件。
+3. 该脚本会自动在 `build/windows-vs2022` 目录下生成 Visual Studio 的解决方案文件 (`.sln`)。
+4. 使用 Visual Studio 2022 打开该解决方案文件，即可编译和运行项目。
+5. 编译后的可执行文件位于 `build/windows-vs2022/bin` 目录下。
+
+#### 使用 Visual Studio Code
+
+1. 克隆 Falcor 仓库到本地。
+2. 确保已安装 VS Code 和 **CMake Tools** 扩展。
+3. 在仓库根目录运行 `setup.bat` 批处理文件，它会配置好 `.vscode` 工作区。
+4. 在 VS Code 中打开 Falcor 根目录。
+5. 使用快捷键 `Ctrl+Shift+P` 打开命令面板，执行 `CMake: Select Configure Preset`，然后选择 `windows-ninja-msvc` 预设。
+6. 按下 `F7` 或点击状态栏中的 "Build" 按钮来编译项目。
+7. 编译后的可执行文件位于 `build/windows-ninja-msvc/bin` 目录下。
+
+---
+
 ## 1. 基础操作
 
 本章节介绍启动和运行 Falcor 的基本步骤，包括如何加载渲染脚本和场景，以及如何配置相机、光源等核心渲染元素。
@@ -90,22 +137,109 @@ Falcor 的渲染过程由**渲染脚本 (Render Script)** 和**场景 (Scene)** 
   * **Operator**: 选择不同的色调映射算法，例如 `Reinhard`、`ACES`, `HableUc2` 等。不同的算子会产生不同的色彩和对比度风格，可根据艺术需求选择。
   * **White Balance (白平衡)**: 勾选后，可调整 `White Point (K)`（白点色温，单位：开尔文），用于校正画面中的色偏，使白色物体在不同色温的光照下看起来仍然是白色。
 
+### 1.6. 视角管理 (Viewpoint Management)
+
+Falcor 提供了强大的视角管理功能，允许用户保存多个摄像机位置并在它们之间快速切换。这对于批量测量、场景预览和自动化分析非常有用。
+
+#### 1.6.1. 视角基本操作
+
+视角管理功能位于右侧的 "Scene" -> "Settings" 面板中：
+
+* **Add Viewpoint (添加视角)**:
+  * **功能**: 将当前摄像机的位置、目标点和朝向保存为一个新的视角。
+  * **操作**: 调整摄像机到理想位置后，点击 `Add Viewpoint` 按钮。系统会自动保存当前的摄像机参数。
+  * **命名**: 新添加的视角会自动编号（如 "Viewpoint 1", "Viewpoint 2" 等），并出现在视角下拉列表中。
+
+* **Remove Viewpoint (移除视角)**:
+  * **功能**: 删除选中的视角。
+  * **操作**: 在视角下拉列表中选择要删除的视角，然后点击 `Remove Viewpoint` 按钮。
+  * **限制**: 无法删除默认视角（"Default"）。
+
+* **视角选择与切换**:
+  * **功能**: 在已保存的视角之间快速切换。
+  * **操作**: 使用视角下拉列表选择目标视角，摄像机会立即移动到该位置。
+  * **应用**: 对比不同角度的渲染效果，或用于批量分析工作流程。
+
+#### 1.6.2. 视角数据导入导出
+
+* **Save Viewpoints (导出视角)**:
+  * **功能**: 将所有已保存的视角信息导出到文本文件。
+  * **操作**: 点击 `Save Viewpoints` 按钮，选择保存路径和文件名。
+  * **用途**: 备份视角信息、团队协作共享、批量处理任务准备。
+
+* **Load Viewpoints (导入视角)**:
+  * **功能**: 从之前导出的文件中恢复视角信息。
+  * **操作**: 点击 `Load Viewpoints` 按钮，选择视角文件进行导入。
+  * **注意**: 导入操作会清除当前的视角列表（除默认视角外），并用文件中的视角替换。
+
+#### 1.6.3. 视角文件格式
+
+导出的视角文件采用特定的文本格式，每行代表一个视角：
+
+```
+timePoint, Transform(position = float3(x, y, z), target = float3(x, y, z), up = float3(x, y, z))
+```
+
+**参数详解**:
+* `timePoint`: 时间点（浮点数，用于动画路径）
+* `position`: 摄像机位置坐标 (x, y, z)
+* `target`: 摄像机对准的目标点坐标 (x, y, z)
+* `up`: 摄像机的上方向向量 (x, y, z)
+
+**示例**:
+```
+0.000000, Transform(position = float3(5.2, 3.1, -2.8), target = float3(0.0, 1.0, 0.0), up = float3(0.0, 1.0, 0.0))
+1.000000, Transform(position = float3(-3.5, 2.8, 4.1), target = float3(0.0, 0.5, 0.0), up = float3(0.0, 1.0, 0.0))
+```
+
+#### 1.6.4. 批量测量准备
+
+视角管理是进行批量光功率测量的前提：
+
+1. **规划测量点**: 在场景中手动调整摄像机到各个需要测量的位置。
+2. **保存视角**: 在每个位置使用 `Add Viewpoint` 保存视角。
+3. **导出数据**: 使用 `Save Viewpoints` 将视角信息导出为文件。
+4. **批量处理**: 在光功率测量脚本中使用导出的视角文件进行自动化批量测量。
+
 ---
 
 ## 2. 光功率测量 (Light Power Measurement)
 
-此功能用于测量场景中特定区域接收到的光功率，常用于光学分析和照明工程。
+此功能用于测量场景中特定区域接收到的光功率，常用于光学分析和照明工程。支持单点测量和批量自动化测量两种模式。
 
 * **渲染脚本**: `IncomingLightPowerExample.py`
 * **核心渲染通道**: `IncomingLightPowerPass`
 
 ### 2.1. 使用方法
 
+#### 单点测量
+
 1. 加载 `IncomingLightPowerExample.py` 渲染脚本。
 2. 加载需要分析的场景。
 3. 在渲染图编辑器中，选中 `IncomingLightPowerPass` 节点以在右侧UI面板显示其参数。
 4. 勾选 **"Enable Statistics"**，这是获取测量结果的前提。
 5. 在 **"Power Statistics"** 组中即可看到实时的光功率测量结果，如总功率（Total Power）、平均功率（Average Power）等。
+
+#### 批量自动化测量
+
+**前提条件**: 必须先准备视角文件。
+
+1. **准备视角数据**:
+   * 使用视角管理功能（见 1.6 节）在场景中添加需要测量的各个位置的视角。
+   * 通过 `Save Viewpoints` 导出视角文件，用于自动化批量测量。
+
+2. **启用批量模式**:
+   * 在 `IncomingLightPowerPass` 参数面板中找到批量处理相关选项。
+   * 加载之前保存的视角文件作为测量点列表。
+
+3. **执行批量测量**:
+   * 系统会自动遍历视角文件中的每个位置。
+   * 在每个视角位置等待指定帧数（`Frames to wait` 参数）以确保渲染稳定。
+   * 自动记录该位置的光功率数据。
+
+4. **数据收集**:
+   * 所有测量位置的数据会被自动收集和整理。
+   * 可通过导出功能将完整的批量测量结果保存为 CSV 或 JSON 格式。
 
 ### 2.2. 参数详解
 
